--- a/src/main/resources/themes/default/create_game.fxml
+++ b/src/main/resources/themes/default/create_game.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" styleClass="create-game-root" hgap="5.0" vgap="5.0"
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="5.0" styleClass="create-game-root" vgap="5.0"
           xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.game.CreateGameController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
@@ -87,15 +87,19 @@
       </children>
     </VBox>
     <Label styleClass="h1" text="%game.create.mods" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-    <Button mnemonicParsing="false" text="%game.create.deselectAll" GridPane.columnIndex="1"
-            GridPane.halignment="CENTER" GridPane.rowIndex="8"/>
-    <Button mnemonicParsing="false" text="%game.create.randomMap" GridPane.columnIndex="2" GridPane.halignment="CENTER"
-            GridPane.rowIndex="8" onAction="#onRandomMapButtonClicked"/>
+    <Button mnemonicParsing="false" onAction="#onRandomMapButtonClicked" text="%game.create.randomMap"
+            GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="8"/>
     <ListView fx:id="modListView" maxHeight="1.7976931348623157E308" prefHeight="100.0" GridPane.columnIndex="1"
               GridPane.rowIndex="5" GridPane.rowSpan="3" GridPane.vgrow="ALWAYS"/>
     <Button mnemonicParsing="false" onAction="#onSelectDefaultGameTypeButtonClicked" text="%game.create.defaultGameType"
             GridPane.halignment="CENTER" GridPane.rowIndex="8"/>
     <ListView fx:id="gameTypeListView" prefHeight="100.0" GridPane.rowIndex="5" GridPane.rowSpan="3"/>
+    <HBox alignment="CENTER" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+      <children>
+        <Button mnemonicParsing="false" text="%game.create.deselectAll" onAction="#onDeselectModsButtonClicked"/>
+        <Button mnemonicParsing="false" text="%game.create.reload" onAction="#onReloadModsButtonClicked"/>
+      </children>
+    </HBox>
   </children>
   <padding>
     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
