Fixed #112 hand cursor over map preview

--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -691,6 +691,7 @@
 }
 
 /***************** Large Map Preview *****************/
+
 .map-preview-large {
   -fx-padding: 10px,5px,5px,5px;
 }
@@ -765,6 +766,7 @@
 
 .map-preview {
   -fx-effect: -fx-drop-shadow;
+  -fx-cursor: hand;
 }
 
 /***************** Window decoration *****************/
