--- a/src/main/resources/themes/default/mod_vault.fxml
+++ b/src/main/resources/themes/default/mod_vault.fxml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="modVaultRoot" maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.mod.ModVaultController"/>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="modVaultRoot" xmlns="http://javafx.com/javafx/8.0.40"
+      fx:controller="com.faforever.client.mod.ModVaultController">
+   <children>
+      <Label styleClass="h1" text="%modVault.recommendedMods"/>
+      <FlowPane fx:id="recommendedModsPane"/>
+      <Label styleClass="h1" text="%modVault.newestMods"/>
+      <FlowPane fx:id="newestModsPane"/>
+      <Label styleClass="h1" text="%modVault.popularMods"/>
+      <FlowPane fx:id="popularModsPane"/>
+      <Label styleClass="h1" text="%modVault.highestRatedMods"/>
+      <FlowPane fx:id="highestRatedModsPane"/>
+   </children>
+</VBox>
