--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -926,3 +926,16 @@
 .chart-bar:highlighted-bar {
   -fx-bar-fill: -fx-accent;
 }
+
+/***************** Mod vault *****************/
+
+.mod-vault .tile {
+  -fx-background-color: -fx-tile-background;
+  -fx-border-width: 1;
+  -fx-border-color: -fx-box-border;
+  -fx-padding: 10;
+  -fx-spacing: 10;
+  -fx-hgap: 10;
+  -fx-vgap: 10;
+}
+
