--- a/src/main/resources/themes/default/chat_user_control.fxml
+++ b/src/main/resources/themes/default/chat_user_control.fxml
@@ -3,15 +3,16 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
-<fx:root alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" minWidth="-Infinity"
-         onContextMenuRequested="#onContextMenuRequested" spacing="5.0" styleClass="chat-user-control-root" type="HBox"
-         xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308"
+         minWidth="-Infinity" onContextMenuRequested="#onContextMenuRequested" spacing="5.0"
+         styleClass="chat-user-control-root" type="HBox" xmlns="http://javafx.com/javafx/8.0.40">
   <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="chat-user-control-avatar" HBox.hgrow="NEVER" />
   <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true"
              styleClass="chat-user-control-country" HBox.hgrow="NEVER"/>
   <Label fx:id="clanLabel" minWidth="0.0" styleClass="chat-user-control-clan"/>
   <Label fx:id="usernameLabel" maxWidth="1.7976931348623157E308" minWidth="0.0" onMouseClicked="#onUsernameClicked"
          styleClass="chat-user-control-username" text="&lt;Username&gt;" HBox.hgrow="ALWAYS"/>
-  <ImageView fx:id="statusImageView" fitHeight="16.0" fitWidth="16.0" onMouseEntered="#onMouseEnterGameStatus"
-             pickOnBounds="true" preserveRatio="true" styleClass="chat-user-control-status" HBox.hgrow="NEVER"/>
+  <ImageView fx:id="statusImageView" fitHeight="16.0" fitWidth="16.0" onMouseClicked="#onMouseClickGameStatus"
+             onMouseEntered="#onMouseEnterGameStatus" pickOnBounds="true" preserveRatio="true"
+             styleClass="chat-user-control-status" HBox.hgrow="NEVER"/>
 </fx:root>
