--- a/src/main/resources/themes/default/window.fxml
+++ b/src/main/resources/themes/default/window.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import java.lang.String?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="windowRoot" minHeight="50.0" minWidth="100.0"
             onMouseClicked="#onMouseClicked" onMouseDragged="#onMouseDragged" onMouseExited="#onMouseExited"
             onMouseMoved="#onMouseMoved" onMousePressed="#onMousePressed" onMouseReleased="#onMouseReleased"
@@ -15,14 +16,26 @@
     <HBox fx:id="windowButtons" alignment="TOP_RIGHT" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
 
-        <Button fx:id="minimizeButton" focusTraversable="false" onAction="#onMinimizeButtonClicked"
-                styleClass="window-button"/>
+        <Button fx:id="minimizeButton" focusTraversable="false" onAction="#onMinimizeButtonClicked">
+          <styleClass>
+            <String fx:value="window-button"/>
+            <String fx:value="minimize-button"/>
+          </styleClass>
+        </Button>
         <Button fx:id="maximizeButton" focusTraversable="false" onAction="#onMaximizeButtonClicked"
-                styleClass="window-button"/>
-        <Button fx:id="restoreButton" focusTraversable="false" onAction="#onRestoreButtonClicked"
-                styleClass="window-button"/>
-        <Button fx:id="closeButton" focusTraversable="false" onAction="#onCloseButtonClicked"
-                styleClass="window-button"/>
+                styleClass="maximize-button"/>
+        <Button fx:id="restoreButton" focusTraversable="false" onAction="#onRestoreButtonClicked">
+          <styleClass>
+            <String fx:value="window-button"/>
+            <String fx:value="restore-button"/>
+          </styleClass>
+        </Button>
+        <Button fx:id="closeButton" focusTraversable="false" onAction="#onCloseButtonClicked">
+          <styleClass>
+            <String fx:value="window-button"/>
+            <String fx:value="close-button"/>
+          </styleClass>
+        </Button>
 
       </children>
     </HBox>
