--- a/src/main/resources/themes/default/mod_detail.fxml
+++ b/src/main/resources/themes/default/mod_detail.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
@@ -13,14 +14,13 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.web.WebView?>
 <?import java.lang.String?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="modDetailRoot" maxHeight="1.7976931348623157E308"
-            maxWidth="1.7976931348623157E308" styleClass="dimmer" xmlns="http://javafx.com/javafx/8.0.40"
-            fx:controller="com.faforever.client.mod.ModDetailController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="modDetailRoot" onMouseClicked="#onDimmerClicked"
+            maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="dimmer"
+            xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.mod.ModDetailController">
   <children>
-    <AnchorPane styleClass="decorated-window" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="100.0"
-                AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="100.0">
+    <AnchorPane onMouseClicked="#onContentPaneClicked" styleClass="decorated-window" AnchorPane.bottomAnchor="100.0"
+                AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="100.0">
       <children>
         <Button focusTraversable="false" onAction="#onCloseButtonClicked" AnchorPane.rightAnchor="0.0"
                 AnchorPane.topAnchor="0.0">
@@ -67,13 +67,14 @@
               <tabs>
                 <Tab text="%mod.description">
                   <content>
-                    <AnchorPane>
+                    <VBox>
                       <children>
-                        <WebView fx:id="modDescriptionWebView" blendMode="ADD" minHeight="100.0" minWidth="100.0"
-                                 prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0"
-                                 AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                        <Label fx:id="modDescriptionLabel" text="Label"/>
                       </children>
-                    </AnchorPane>
+                      <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                      </padding>
+                    </VBox>
                   </content>
                 </Tab>
                 <Tab text="%mod.comments">
