--- a/src/main/resources/themes/default/mod_vault.fxml
+++ b/src/main/resources/themes/default/mod_vault.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -22,23 +21,40 @@
                <children>
                   <Label styleClass="h1" text="%modVault.title"/>
                   <Label text="%modVault.description"/>
-                  <HBox maxWidth="1.7976931348623157E308" spacing="10.0">
+                  <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="10.0">
                      <children>
-                        <TextField promptText="%modVault.searchPrompt" HBox.hgrow="ALWAYS"/>
-                        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" styleClass="fontawesome"
-                                text="">
+                        <TextField fx:id="searchTextField" promptText="%modVault.searchPrompt" HBox.hgrow="ALWAYS"/>
+                        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false"
+                                onAction="#onResetButtonClicked" styleClass="fontawesome" text="">
+                           <padding>
+                              <Insets left="20.0" right="20.0"/>
+                           </padding>
+                        </Button>
+                        <Button defaultButton="true" maxHeight="1.7976931348623157E308" mnemonicParsing="false"
+                                onAction="#onSearchModButtonClicked" styleClass="fontawesome" text="">
                            <padding>
                               <Insets left="20.0" right="20.0"/>
                            </padding>
                         </Button>
                      </children>
                   </HBox>
-                  <Label styleClass="h2" text="%modVault.recommendedUidMods"/>
-                  <FlowPane fx:id="recommendedUiModsPane" hgap="10.0" vgap="10.0"/>
-                  <Label styleClass="h2" text="%modVault.newestMods"/>
-                  <FlowPane fx:id="newestModsPane" hgap="10.0" vgap="10.0"/>
-                  <Label styleClass="h2" text="%modVault.popularMods"/>
-                  <FlowPane fx:id="popularModsPane" hgap="10.0" vgap="10.0"/>
+                  <VBox fx:id="showroomGroup" spacing="5.0">
+                     <children>
+                        <Label styleClass="h2" text="%modVault.recommendedUidMods"/>
+                        <FlowPane fx:id="recommendedUiModsPane" hgap="10.0" maxWidth="1.7976931348623157E308"
+                                  vgap="10.0"/>
+                        <Label styleClass="h2" text="%modVault.newestMods"/>
+                        <FlowPane fx:id="newestModsPane" hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0"/>
+                        <Label styleClass="h2" text="%modVault.popularMods"/>
+                        <FlowPane fx:id="popularModsPane" hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0"/>
+                     </children>
+                  </VBox>
+                  <VBox fx:id="searchResultGroup" spacing="5.0">
+                     <children>
+                        <Label styleClass="h1" text="%modVault.searchResult"/>
+                        <FlowPane fx:id="searchResultPane" hgap="10.0" vgap="10.0"/>
+                     </children>
+                  </VBox>
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
